# undercover-agent-city

./: .env.example  .gitattributes  .gitignore  BLOG_POST.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  undercover_agent_city_mixed_training.ipynb  undercover_agent_city_sequential_training.ipynb  undercover_agent_city_training.ipynb  undercover_agent_city_training_hf.ipynb
server/: __init__.py  app.py  city_data.py  city_environment.py  city_web_interface.py  rubrics.py
server/static/: app.jsx  city-data.js  city-grid.jsx  episode.js  index.html  panels.jsx  styles.css
